--- a/index.css
+++ b/index.css
@@ -8,6 +8,8 @@
 /* HIDE SCROLLBAR */
 body::-webkit-scrollbar {
   display: none;
+  width: 100vw;
+  height: 100vw;
 }
 
 /* DEFAULT SETTINGS */
@@ -226,6 +228,50 @@ a {
     }
   }
 }
+@media screen and (max-width: 1200px) {
+}
+@media screen and (max-width: 1000px) {
+}
+@media screen and (max-width: 640px) {
+  #navbar {
+    max-width: 100%;
+    height: auto;
+
+    padding: 2px;
+  }
+  .i-container {
+    width: 100%;
+    left: 0%;
+    bottom: 0%;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 8px;
+  }
+  .outer-image-display-container {
+    .image-display-container {
+      .image-container {
+        max-width: 90%;
+        max-height: 90%;
+        .image-display-container-image {
+          max-height: 100%;
+          max-width: 100%;
+        }
+      }
+      .exit {
+        position: absolute;
+        top: 2%;
+      }
+      .left {
+        position: absolute;
+        left: 2%;
+      }
+      .right {
+        position: absolute;
+        left: 88%;
+      }
+    }
+  }
+}
 
 /* MAIN */
 #header-container {
@@ -271,18 +317,45 @@ a {
   bottom: 4%;
   width: 100%;
   height: 100%;
-  font-size: 6rem;
 }
 .abs-container h1 {
   position: absolute;
   z-index: 2;
+
+  font-size: 12rem;
 
   transition-property: opacity;
   transition-duration: 160ms;
 
   animation: abs_text_anim 4s infinite;
 }
-
+@media screen and (max-width: 1200px) {
+  .abs-container h1 {
+    font-size: 10rem;
+  }
+  .bottom-txt {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .abs-container h1 {
+    font-size: 8rem;
+  }
+  .bottom-txt div {
+    font-size: 0.8rem;
+  }
+}
+@media screen and (max-width: 640px) {
+  .abs-container h1 {
+    font-size: 5.4rem;
+  }
+  .bottom-txt div {
+    font-size: 0.8rem;
+  }
+  .bottom-txt {
+    width: 80%;
+  }
+}
 /* OTHER CONTAINERS */
 
 #other-containers {
@@ -336,6 +409,24 @@ a {
   color: white;
   font-size: 1rem;
 }
+@media screen and (max-width: 1200px) {
+  .container,
+  .container-header {
+    width: 72%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .container,
+  .container-header {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 640px) {
+  .container,
+  .container-header {
+    width: 94%;
+  }
+}
 .outer-box {
   display: flex;
   flex-direction: column;
@@ -351,6 +442,11 @@ a {
   align-items: center;
   border-radius: 32px;
 
+  .inner-text {
+    flex-grow: 1;
+
+    width: 60%;
+  }
   .multimage-container {
     z-index: 5;
 
@@ -361,7 +457,8 @@ a {
     flex-wrap: wrap;
     gap: 4px;
 
-    width: 240%;
+    width: 40%;
+
     /*max-width: 400px;*/
 
     img {
@@ -382,6 +479,55 @@ a {
 .inner-box h2 {
   margin-bottom: 32px;
 }
+@media screen and (max-width: 1200px) {
+  .inner-box {
+    .multimage-container {
+      width: 32%;
+      .mi {
+        width: 48%;
+      }
+    }
+  }
+}
+@media screen and (max-width: 1000px) {
+}
+@media screen and (max-width: 640px) {
+  .inner-box {
+    flex-direction: column;
+    .inner-text,
+    .multimage-container {
+      width: 100%;
+    }
+    .multimage-container {
+      width: 90%;
+      .mi {
+        width: 48%;
+      }
+      .big {
+        width: 48%;
+      }
+    }
+    .multimage-container.single {
+      .big {
+        width: 90%;
+      }
+    }
+  }
+  .inner-box.mini {
+    flex-direction: row;
+  }
+  .inner-box.mobile-reverse {
+    flex-direction: column-reverse;
+  }
+  #mobile-app-multimage {
+    .big {
+      width: 100%;
+    }
+    .mi {
+      width: 30%;
+    }
+  }
+}
 
 #second-container {
   .inner-box {
@@ -396,6 +542,7 @@ a {
     margin: 0px 36px;
   }
 }
+
 #third-container,
 #fourth-container {
   .outer-box {
@@ -437,11 +584,23 @@ a {
       }
     }
   }
+  @media screen and (max-width: 1200px) {
+    .outer-box {
+      padding: 36px 36px 26px 36px;
+      gap: 8px;
+    }
+  }
+  @media screen and (max-width: 1000px) {
+  }
+  @media screen and (max-width: 640px) {
+    .inner-links {
+      margin-top: 24px;
+      flex-direction: column;
+      gap: 24px;
+    }
+  }
 }
 #fourth-container {
-  .multimage-container {
-    width: 400%;
-  }
   .inner-text {
     display: flex;
     flex-direction: column;
@@ -450,9 +609,7 @@ a {
     gap: 16px;
   }
 }
-#topdown-container {
-  width: 400%;
-}
+
 /* FOOTER */
 
 .footer {
